--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "simple-ts-event-dispatcher": "^0.1.5"
+    "hoek": "^5.0.3",
+    "npm": "^6.0.0",
+    "simple-ts-event-dispatcher": "^0.1.5",
+    "to": "^0.2.9",
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "@types/jasmine": "^2.6.0",
