--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-ts-promise",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "A simple implementation of promises in Typescript",
   "keywords": [
     "promise",
@@ -20,22 +20,18 @@
   },
   "license": "MIT",
   "dependencies": {
-    "hoek": "^5.0.3",
-    "npm": "^6.3.0",
-    "simple-ts-event-dispatcher": "^0.1.5",
-    "to": "^0.2.9",
-    "update": "^0.7.4"
+    "simple-ts-event-dispatcher": "^0.1.6"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.6.0",
-    "codecov": "^2.3.0",
-    "jasmine": "^2.8.0",
-    "karma": "^1.5.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-typescript": "^3.0.13",
-    "nyc": "^11.5.0",
-    "typescript": "^2.5.2"
+    "@types/jasmine": "^3.6.10",
+    "codecov": "^3.8.1",
+    "jasmine": "^3.7.0",
+    "karma": "^6.3.2",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.3",
+    "karma-jasmine": "^4.0.1",
+    "karma-typescript": "^5.5.1",
+    "typescript": "^4.2.4"
   },
   "homepage": "https://github.com/malero/simple-ts-promise",
   "git": "https://github.com/malero/simple-ts-promise",
